docker docker pusying

--- a/customer-support-service/docker/dev/nginx/default.conf
+++ b/customer-support-service/docker/dev/nginx/default.conf
@@ -18,7 +18,7 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        fastcgi_pass booking_app:9000; # PENTING: Gunakan nama service kontainer PHP-FPM Anda
+        fastcgi_pass cs_app:9000; # PENTING: Gunakan nama service kontainer PHP-FPM Anda
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
