--- a/flight-service/docker-compose.yml
+++ b/flight-service/docker-compose.yml
@@ -35,11 +35,11 @@ services:
             - REDIS_PORT=6379
             - REDIS_HOST=flight_cache
             - DB_CONNECTION=mysql
-            - DB_HOST=flight_db
+            - DB_HOST=172.18.0.3
             - DB_PORT=3306
             - DB_DATABASE=db_flight
             - DB_USERNAME=root
-            - DB_PASSWORD=123
+            - DB_PASSWORD=
         networks:
             - iae_shared_network
 
@@ -47,7 +47,7 @@ services:
         image: mysql:8.2
         container_name: flight_db
         environment:
-            - MYSQL_ROOT_PASSWORD=123
+            - MYSQL_ROOT_PASSWORD=
             - MYSQL_DATABASE=db_flight
         ports:
             - "33068:3306"
@@ -70,7 +70,7 @@ services:
         depends_on:
             - flight_db
         environment:
-            - PMA_HOST=flight_db
+            - PMA_HOST=172.18.0.3
             - PMA_USER=root
             - PMA_PASSWORD=123
             - VIRTUAL_HOST=pma.flight.test
