--- a/booking-service/package.json
+++ b/booking-service/package.json
@@ -3,14 +3,14 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "dev": "vite", 
-    "start:backend": "node server.cjs", 
+    "dev": "vite",
+    "start:backend": "node server.cjs",
     "start": "concurrently \"npm run dev\" \"npm run start:backend\""
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.8.2",
-    "concurrently": "^9.0.1", 
+    "concurrently": "^9.0.1",
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.0",
     "vite": "^6.2.4"
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "apollo-server": "^3.13.0",
+    "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
     "mysql2": "^3.14.1"
   }
