--- a/flight-service/.env.example
+++ b/flight-service/.env.example
@@ -22,10 +22,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=172.18.0.3
-DB_PORT=3306
+DB_PORT=3308
 DB_DATABASE=db_flight
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=234
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
